@@ -201,14 +201,14 @@ allprojects{
         dependsOn clearCache
 
         options.forkOptions.jvmArgs += [
-            '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
-            '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
-            '--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
-            '--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
-            '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
-            '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
-            '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
-            '--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED'
+            '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+            '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED'
         ]
     }
 }
